syntax = 'proto3';

package omni.base.proto.users.queries;

message UserReadQuery {
  string id = 1;
}

message UserInfo {
  string id = 1;
  string email = 2;
}