syntax = 'proto3';

package omni.base.proto.users.commands;
//commands
message CreateCommand {
  string unique_name = 1;
  string password = 2;

  optional string name = 100;
  optional string sur_name = 101;
}

//response
//response is boolean